// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentRefinements options.refinements can be used with a disjunctive facet 1`] = `
<div
  className="root"
>
  <ul
    className="list"
  >
    <li
      className="item"
      key="customDisjunctiveFacet-0"
    >
      <span
        className="label"
      >
        CustomDisjunctiveFacet
        :
      </span>
      <span
        className="category"
        key="customDisjunctiveFacet:disjunctive:val1#1"
      >
        <span
          className="categoryLabel"
        >
          val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
  </ul>
</div>
`;

exports[`CurrentRefinements options.refinements can be used with a facet 1`] = `
<div
  className="root"
>
  <ul
    className="list"
  >
    <li
      className="item"
      key="customFacet-0"
    >
      <span
        className="label"
      >
        CustomFacet
        :
      </span>
      <span
        className="category"
        key="customFacet:facet:val1#1"
      >
        <span
          className="categoryLabel"
        >
          val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
  </ul>
</div>
`;

exports[`CurrentRefinements options.refinements can be used with a hierarchical facet 1`] = `
<div
  className="root"
>
  <ul
    className="list"
  >
    <li
      className="item"
      key="customHierarchicalFacet-0"
    >
      <span
        className="label"
      >
        CustomHierarchicalFacet
        :
      </span>
      <span
        className="category"
        key="customHierarchicalFacet:hierarchical:val1#1"
      >
        <span
          className="categoryLabel"
        >
          val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
  </ul>
</div>
`;

exports[`CurrentRefinements options.refinements can be used with a query 1`] = `
<div
  className="root"
>
  <ul
    className="list"
  >
    <li
      className="item"
      key="query-0"
    >
      <span
        className="label"
      >
        Query
        :
      </span>
      <span
        className="category"
        key="query:query:search1#1"
      >
        <span
          className="categoryLabel"
        >
          <q>
            search1
          </q>
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
  </ul>
</div>
`;

exports[`CurrentRefinements options.refinements can be used with a tag 1`] = `
<div
  className="root"
>
  <ul
    className="list"
  >
    <li
      className="item"
      key="_tags-0"
    >
      <span
        className="label"
      >
        _tags
        :
      </span>
      <span
        className="category"
        key="_tags:tag:tag1#1"
      >
        <span
          className="categoryLabel"
        >
          tag1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
  </ul>
</div>
`;

exports[`CurrentRefinements options.refinements can be used with an exclude 1`] = `
<div
  className="root"
>
  <ul
    className="list"
  >
    <li
      className="item"
      key="customExcludeFacet-0"
    >
      <span
        className="label"
      >
        CustomExcludeFacet
        :
      </span>
      <span
        className="category"
        key="customExcludeFacet:exclude:val1#1"
      >
        <span
          className="categoryLabel"
        >
          val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
  </ul>
</div>
`;

exports[`CurrentRefinements options.refinements can be used with numeric filters 1`] = `
<div
  className="root"
>
  <ul
    className="list"
  >
    <li
      className="item"
      key="customNumericFilter-0"
    >
      <span
        className="label"
      >
        CustomNumericFilter
        :
      </span>
      <span
        className="category"
        key="customNumericFilter:numeric:val1:=#1"
      >
        <span
          className="categoryLabel"
        >
          val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="customNumericFilter-1"
    >
      <span
        className="label"
      >
        CustomNumericFilter
        :
      </span>
      <span
        className="category"
        key="customNumericFilter:numeric:val2:<=#1"
      >
        <span
          className="categoryLabel"
        >
          val2
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="customNumericFilter-2"
    >
      <span
        className="label"
      >
        CustomNumericFilter
        :
      </span>
      <span
        className="category"
        key="customNumericFilter:numeric:val3:>=#1"
      >
        <span
          className="categoryLabel"
        >
          val3
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
  </ul>
</div>
`;

exports[`CurrentRefinements renders 1`] = `
<div
  className="root"
>
  <ul
    className="list"
  >
    <li
      className="item"
      key="facet-0"
    >
      <span
        className="label"
      >
        Facet
        :
      </span>
      <span
        className="category"
        key="facet:facet:facet-val1#1"
      >
        <span
          className="categoryLabel"
        >
          facet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
      <span
        className="category"
        key="facet:facet:facet-val2#2"
      >
        <span
          className="categoryLabel"
        >
          facet-val2
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="facet-1"
    >
      <span
        className="label"
      >
        Facet
        :
      </span>
      <span
        className="category"
        key="facetExclude:exclude:disjunctiveFacet-val1#1"
      >
        <span
          className="categoryLabel"
        >
          disjunctiveFacet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="disjunctive-2"
    >
      <span
        className="label"
      >
        Disjunctive
        :
      </span>
      <span
        className="category"
        key="disjunctiveFacet:disjunctive:disjunctiveFacet-val1#1"
      >
        <span
          className="categoryLabel"
        >
          disjunctiveFacet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="hierarchical-3"
    >
      <span
        className="label"
      >
        Hierarchical
        :
      </span>
      <span
        className="category"
        key="hierarchicalFacet:hierarchical:hierarchicalFacet-val1#1"
      >
        <span
          className="categoryLabel"
        >
          hierarchicalFacet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="numeric-4"
    >
      <span
        className="label"
      >
        Numeric
        :
      </span>
      <span
        className="category"
        key="numericFacet:numeric:numericFacet-val1:>=#1"
      >
        <span
          className="categoryLabel"
        >
          numericFacet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="tag-5"
    >
      <span
        className="label"
      >
        Tag
        :
      </span>
      <span
        className="category"
        key="_tags:tag:tag1#1"
      >
        <span
          className="categoryLabel"
        >
          tag1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
  </ul>
</div>
`;
